--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
       url: jdbc:mysql://localhost:3306/yu_picture
       username: root
       password: root
+  # 开放更大的文件上传体积
+    servlet:
+      multipart:
+        max-file-size: 10MB
+
 mybatis-plus:
       configuration:
         # Mybatis 配置
@@ -35,3 +40,16 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.yupi.yupipicture.controller
+
+
+
+## 对象存储配置（需要从腾讯云获取）
+#cos:
+#  client:
+#    host: xxx
+#    secretId: xxx
+#    secretKey: xxx
+#    region: xxx
+#    bucket: xxx
+#
+
