--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+### Custom ###
+application-local.yml
+
+
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
 ### STS ###
 .apt_generated
 .classpath
