--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,14 @@ server:
   port: 8123
   servlet:
     context-path: /api
-
+    # cookie 30天过期
+    session:
+      cookie:
+        max-age: 2592000
 spring:
     application:
       name: yu-picture-backend
-
-    #数据库配置
+  #数据库配置
     datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/yu_picture
@@ -17,6 +19,12 @@ spring:
     servlet:
       multipart:
         max-file-size: 10MB
+  # Redis 配置
+    redis:
+     database: 0
+     host: 127.0.0.1
+     port: 6379
+     timeout: 5000
 
 mybatis-plus:
       configuration:
@@ -40,6 +48,7 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.yupi.yupipicture.controller
+
 
 
 
